# yolo-ng

./: .gitignore  CMakeLists.txt  Makefile  README.md  flake.nix  manifest.json  metadata.json  module.yaml  result  test-persistence.sh  ui_metadata.json
qml/: main.qml  yolo_ng.qrc
src/: yolo_ng_board.cpp  yolo_ng_board.cpp.bak  yolo_ng_board.h  yolo_ng_plugin.cpp  yolo_ng_plugin.h  yolo_ng_plugin.json  yolo_ng_ui_component.cpp  yolo_ng_ui_component.h
